MockFactory via ServiceLoader (#1746)
Added API IMockMaker to make the mock creation pluggable via the ServiceLoader pattern.
The MockMakerRegistry provides access to the different IMockMaker.

fixes #1220

Co-authored-by: Leonard Brünings <lord_damokles@gmx.net>
Co-authored-by: Björn Kautler <Bjoern@Kautler.net>